--- a/ru.yml
+++ b/ru.yml
@@ -216,13 +216,13 @@ presets:
 
 settings:
     too_many_args: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Слишком много аргументов</b>"
-    blacklisted: "<emoji document_id=5197474765387864959>👍</emoji> <b>Чат {} добавлен в черный список юзербота</b>"
-    unblacklisted: "<emoji document_id=5197474765387864959>👍</emoji> <b>Чат {} удален из черного списка юзербота</b>"
-    user_blacklisted: "<emoji document_id=5197474765387864959>👍</emoji> <b>Пользователь {} добавлен в черный список юзербота</b>"
-    user_unblacklisted: "<emoji document_id=5197474765387864959>👍</emoji> <b>Пользователь {} удален из черного списка юзербота</b>"
-    what_prefix: "<emoji document_id=5382187118216879236>❓</emoji> <b>А какой префикс ставить то?</b>"
-    prefix_incorrect: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Префикс должен состоять только из одного символа</b>"
-    prefix_set: "{} <b>Префикс обновлен. Чтобы вернуть его, используй</b> <code>{newprefix}setprefix {oldprefix}</code>"
+    blacklisted: "<emoji document_id=5197474765387864959>👍</emoji> <b>Чат {} добавлен в чс юба</b>"
+    unblacklisted: "<emoji document_id=5197474765387864959>👍</emoji> <b>Чат {} удален из чс юба</b>"
+    user_blacklisted: "<emoji document_id=5197474765387864959>👍</emoji> <b>Пиздюк {} добавлен в чс юба</b>"
+    user_unblacklisted: "<emoji document_id=5197474765387864959>👍</emoji> <b>Пиздюк {} удален из чс юба</b>"
+    what_prefix: "<emoji document_id=5382187118216879236>❓</emoji> <b>А какой префи ебашить то?</b>"
+    prefix_incorrect: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Преф должен состоять только из одного символа</b>"
+    prefix_set: "{} <b>Префи обновлен. Чтобы вернуть его, используй</b> <code>{newprefix}setprefix {oldprefix}</code>"
     alias_created: "<emoji document_id=5197474765387864959>👍</emoji> <b>Алиас создан. Используй его через</b> <code>{}</code>"
     aliases: "<b>🔗 Алиасы:</b>\n"
     no_command: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Команда</b> <code>{}</code> <b>не существует</b>"
@@ -233,18 +233,18 @@ settings:
     db_cleared: "<emoji document_id=5197474765387864959>👍</emoji> <b>База очищена</b>"
     hikka: "{} <b>{}.{}.{}</b> <i>{}</i>\n\n<b><emoji document_id=5377437404078546699>💜</emoji> <b>Hikka-TL:</b> <i>{}</i>\n{} <b>Hikka-Pyro:</b> <i>{}</i>\n\n<emoji document_id=5454182070156794055>⌨️</emoji> <b>Developer: t.me/hikariatama</b>"
     _cls_doc: "Управление базовыми настройками юзербота"
-    confirm_cleardb: "⚠️ <b>Вы уверены, что хотите сбросить базу данных?</b>"
-    cleardb_confirm: "🗑 Очистить базу"
+    confirm_cleardb: "⚠️ <b>Уверен, что хочешь ресетнуть бд?</b>"
+    cleardb_confirm: "🗑 Ресет"
     cancel: "🚫 Отмена"
-    who_to_blacklist: "<emoji document_id=5382187118216879236>❓</emoji> <b>Кого заблокировать то?</b>"
-    who_to_unblacklist: "<emoji document_id=5382187118216879236>❓</emoji> <b>Кого разблокировать то?</b>"
+    who_to_blacklist: "<emoji document_id=5382187118216879236>❓</emoji> <b>Кого забанить то?</b>"
+    who_to_unblacklist: "<emoji document_id=5382187118216879236>❓</emoji> <b>Кого разбанить то?</b>"
     unstable: "\n\n<emoji document_id=5467370583282950466>🙈</emoji> <b>Ты используешь нестабильную ветку</b> <code>{}</code><b>!</b>"
     prefix_collision: "<emoji document_id=5469654973308476699>💣</emoji> <b>Префиксы Dragon и Hikka должны отличаться!</b>"
     _cmd_doc_addalias: "Установить алиас для команды"
     _cmd_doc_aliases: "Показать список алиасов"
     _cmd_doc_blacklist: "[чат] [модуль] - Отключить бота где-либо"
     _cmd_doc_blacklistuser: "[пользователь] - Запретить пользователю выполнять команды"
-    _cmd_doc_cleardb: "Очистить базу данных"
+    _cmd_doc_cleardb: "Очистить бд"
     _cmd_doc_delalias: "Удалить алиас для команды"
     _cmd_doc_hikka: "Показать версию Hikka"
     _cmd_doc_setprefix: "[dragon] <префикс> - Установить префикс команд"
@@ -285,8 +285,8 @@ hikka_config:
     builtin: "🛰 Встроенные"
     external: "🛸 Внешние"
     libraries: "📦 Библиотеки"
-    _cmd_doc_config: "Настроить модули"
-    _cmd_doc_fconfig: "<модуль> <настройка> <значение> - установить значение конфига для модуля"
+    _cmd_doc_config: "Настроить моды"
+    _cmd_doc_fconfig: "<модуль> <настройка> <значение> - установить значение конфига для мода"
 
 inline_stuff:
     bot_username_invalid: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Неправильный ник бота. Он должен заканчиваться на</b> <code>bot</code> <b>и быть не короче чем 5 символов</b>"
@@ -303,8 +303,8 @@ test:
     debugging_disabled: "<emoji document_id=5332533929020761310>✅</emoji> <b>Режим разработчика выключен</b>"
     suspend_invalid_time: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Неверное время заморозки</b>"
     suspended: "<emoji document_id=5452023368054216810>🥶</emoji> <b>Бот заморожен на</b> <code>{}</code> <b>секунд</b>"
-    results_ping: "<emoji document_id=5431449001532594346>⚡️</emoji> <b>Пинг телеги:</b> <code>{}</code> <b>ms</b>\n<emoji document_id=5445284980978621387>🚀</emoji> <b>Прошло с прошлого рестарта: {}</b>"
-    ping_hint: "<emoji document_id=5472146462362048818>💡</emoji> <i>Пинг телеги в большей степени зависит от загруженности серверов телеги и других внешних факторов и никак не связана с параметрами сервера, на который установлен юб</i>"
+    results_ping: "<emoji document_id=5431449001532594346>⚡️</emoji> <b>Пинг:</b> <code>{}</code> <b>ms</b>\n<emoji document_id=5445284980978621387>🚀</emoji> <b>Аптайм: {}</b>"
+    ping_hint: "<emoji document_id=5472146462362048818>💡</emoji> <u><i>Зачастую, пинг зависит от хоста, на котором поставлен юб. Если пинг будет выше, значит, либо с телегой чё то, либо хост хуйня. Чем ниже пинг - тем лучше</u></i>"
     confidential: "⚠️ <b>Уровень логов</b> <code>{}</code> <b>может содержать личную информацию, будь осторожен</b>"
     confidential_text: "⚠️ <b>Уровень логов</b> <code>{0}</code> <b>может содержать личную информацию, будь осторожен</b>\n<b>Напиши</b> <code>.logs {0} force_insecure</code><b>, чтобы отправить логи игнорируя предупреждение</b>"
     choose_loglevel: "💁‍♂️ <b>Выбери уровень логов</b>"
@@ -319,7 +319,7 @@ test:
     _cmd_doc_clearlogs: "Очистить логи"
 
 unit_heta:
-    no_query: "<emoji document_id=5210952531676504517>❌</emoji> <b>Вы должны указать запрос</b>"
+    no_query: "<emoji document_id=5210952531676504517>❌</emoji> <b>Ты должен указать запрос</b>"
     no_results: "<emoji document_id=5210952531676504517>❌</emoji> <b>Нет результатов</b>"
     api_error: "<emoji document_id=5210952531676504517>❌</emoji> <b>С API случилась беда</b>"
     result: "🥰 <b>Результаты для</b> <code>{query}</code><b>:</b>\n\n🧳 <code>{name}</code> <b>от</b> <code>{dev}</code>\n👨‍🏫 <i>{cls_doc}</i>\n\n📚 <b>Команды:</b>\n{commands}\n\n🔗 <b>Установить:</b> <code>{prefix}dlh {mhash}</code>"
@@ -510,7 +510,7 @@ translations:
     too_long: "<emoji document_id=5433653135799228968>📁</emoji> <b>Вывод команды слишком длинный, поэтому он отправлен в файле.</b>"
     choose_language: "🗽 <b>Выберите язык</b>"
     not_official: "<emoji document_id=5312383351217201533>⚠️</emoji> <b>Этот язык не поддерживается официально</b>"
-    requested_join: "💫 <b>Модуль</b> <code>{}</code> <b>запросил присоединение к каналу <a href='https://t.me/{}'>{}</a></b>\n\n<b>❓ Причина:</b> <i>{}</i>"
+    requested_join: "💫 <b>Мод</b> <code>{}</code> <b>запросил саб к аналу <a href='https://t.me/{}'>{}</a></b>\n\n<b>❓ Причина:</b> <i>{}</i>"
     fw_error: "<emoji document_id=5877458226823302157>🕒</emoji> <b>Команда</b> <code>{}</code> <b>вызвал FloodWait {} в методе</b> <code> {}</code>"
     rpc_error: "<emoji document_id=5877477244938489129>🚫</emoji> <b>Команда</b> <code>{}</code> <b>не удалась из-за ошибки RPC:</b> <code>{}</code>"
     _cmd_doc_dllangpack: "[ссылка на пак | пустое чтобы удалить] - Изменить внешний пак перевода"
@@ -582,15 +582,15 @@ $validators:
     entity_like: "ссылка на сущность, имя пользователя или Telegram ID"
 
 $inline:
-    opening_form: " <b>Открываю форму...</b>"
+    opening_form: " <b>Открываю хуйню...</b>"
     opening_gallery: " <b>Открываю галерею...</b>"
-    opening_list: " <b>Открываю список...</b>"
+    opening_list: " <b>Открываю список пиздюков...</b>"
     inline403: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Вы не можете отправлять встроенные элементы в этом чате</b>"
     invoke_failed: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Вызов юнита завершился неудачей! Подробнее в логах</b>"
     invoke_failed_logs: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Вызов юнита завершился неудачей!</b>\n\n<emoji document_id=5226512880362332956>📖</emoji> <b>Логи:</b>\n\n<code>{}</code>"
     show_inline_cmds: "📄 Показать все доступные встроенные команды"
-    no_inline_cmds: "У вас нет доступных inline команд"
-    no_inline_cmds_msg: "<b>😔 Нет доступных inline команд или у вас нет доступа к ним</b>"
+    no_inline_cmds: "У тебя нет доступных inline команд"
+    no_inline_cmds_msg: "<b>😔 Нет доступных inline команд или у тебя нет доступа к ним</b>"
     inline_cmds: "ℹ️ У вас {} доступная(-ых) команда(-ы)"
     inline_cmds_msg: "<b>ℹ️ Доступные inline команды:</b>\n\n{}"
     run_command: "🏌️ Выполнить команду"
