--- a/ru.yml
+++ b/ru.yml
@@ -1,9 +1,9 @@
 hikka_security:
     no_command: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Команда</b> <code>{}</code> <b>не найдена!</b>"
-    permissions: "🔐 <b>Здесь можно настроить разрешения для команды</b> <code>{}{}</code>"
-    close_menu: "🙈 Закрыть это меню"
+    permissions: "🔐 <b>Здесь можно настроить огры для команды</b> <code>{}{}</code>"
+    close_menu: "🙈 Закрыть нахуй"
     global: "🔐 <b>Здесь можно настроить глобальную исключающую маску. Если тумблер выключен здесь, он выключен для всех команд</b>"
-    owner: "😎 Владелец"
+    owner: "😎 Владыка"
     group_owner: "🧛‍♂️ Влад. группы"
     group_admin_add_admins: "🧑‍⚖️ Админ (добавлять участников)"
     group_admin_change_info: "🧑‍⚖️ Админ (изменять инфо)"
@@ -17,7 +17,7 @@ hikka_security:
     owner_list: "<emoji document_id=5386399931378440814>😎</emoji> <b>Челы в группе</b> <code>owner</code><b>:</b>\n\n{}"
     no_owner: "<emoji document_id=5386399931378440814>😎</emoji> <b>Нет юзеров в группе</b> <code>owner</code>"
     no_user: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Укажи, кому выдавать права</b>"
-    not_a_user: "<emoji document_id=5447644880824181073>⚠️</emoji> <b>Указанная цель - не пользователь</b>"
+    not_a_user: "<emoji document_id=5447644880824181073>⚠️</emoji> <b>Указанная цель - не пиздюк</b>"
     cancel: "🚫 Отменяй нахуй"
     confirm: "👑 Подтверждай или ты пидор"
     self: "<emoji document_id=5447644880824181073>⚠️</emoji> <b>Нельзя управлять своими правами!</b>"
@@ -74,7 +74,7 @@ hikka_security:
     users_list: "<emoji document_id=5870772616305839506>👥</emoji> <b>Юзеры:</b>\n{}\n"
     no_permissions: "<emoji document_id=5870450390679425417>🗒</emoji> <b>Нет разрешений</b>"
     permissions_list: "<emoji document_id=5870450390679425417>🗒</emoji> <b>Права доступа:</b>\n{}\n"
-    sgroup_li: "<emoji document_id=4974264756668990388>▫️</emoji> <code>{}</code> · <b>{} пользовател(-ей)</b> · <b>{} правил(-о)</b>"
+    sgroup_li: "<emoji document_id=4974264756668990388>▫️</emoji> <code>{}</code> · <b>{} юзер(-ов)</b> · <b>{} правил(-о)</b>"
     sgroups_list: "<emoji document_id=5870704313440932932>🔒</emoji> <b>Группы безопасности:</b>\n\n{}"
     deleted_sgroup: "<emoji document_id=5870704313440932932>🔒</emoji> <b>Группа безопасности</b> <code>{}</code> <b>удалена</b>"
     user_already_in_sgroup: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Юзер</b> <code>{}</code> <b>уже состоит в группе безопасности</b> <code>{}</code>"
@@ -85,8 +85,8 @@ hikka_security:
     _cmd_doc_sgroup: "<имя> - Показать информацию о группе безопасности"
     _cmd_doc_sgroups: "Список групп безопасности"
     _cmd_doc_newsgroup: "<имя> - Создать новую группу безопасности"
-    _cmd_doc_sgroupadd: "<имя> [пользователь или ответ] - Добавить пользователя в группу безопасности"
-    _cmd_doc_sgroupdel: "<имя> [пользователь или ответ] - Удалить пользователя из группы безопасности"
+    _cmd_doc_sgroupadd: "<имя> [пользователь или ответ] - Добавить пиздюка в группу безопасности"
+    _cmd_doc_sgroupdel: "<имя> [пользователь или ответ] - Удалить пиздюка из группы безопасности"
 
 hikka_settings:
     watchers: "<emoji document_id=5424885441100782420>👀</emoji> <b>Смотрители:</b>\n\n<b>{}</b>"
@@ -94,17 +94,17 @@ hikka_settings:
     disabled: "<emoji document_id=5424885441100782420>👀</emoji> <b>Смотритель {} теперь <u>выключен</u></b>"
     enabled: "<emoji document_id=5424885441100782420>👀</emoji> <b>Смотритель {} теперь <u>включен</u></b>"
     args: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Укажи имя смотрителя</b>"
-    user_nn: "<emoji document_id=5469791106591890404>🪄</emoji> <b>Состояние NoNick для этого пользователя: {}</b>"
+    user_nn: "<emoji document_id=5469791106591890404>🪄</emoji> <b>Состояние NoNick для этого пиздюка: {}</b>"
     no_cmd: "<emoji document_id=5469791106591890404>🪄</emoji> <b>Укажи команду, для которой надо включить\\выключить NoNick</b>"
     cmd_nn: "<emoji document_id=5469791106591890404>🪄</emoji> <b>Состояние NoNick для</b> <code>{}</code><b>: {}</b>"
     cmd404: "<emoji document_id=5469791106591890404>🪄</emoji> <b>Команда не найдена</b>"
-    inline_settings: "⚙️ <b>Здесь можно управлять настройками Hikka</b>"
-    confirm_update: "🧭 <b>Подтвердите обновление. Юзербот будет перезагружен</b>"
-    confirm_restart: "🔄 <b>Подтвердите перезагрузку</b>"
-    suggest_fs: "✅ Предлагать сохранение модулей"
-    do_not_suggest_fs: "🚫 Предлагать сохранение модулей"
-    use_fs: "✅ Всегда сохранять модули"
-    do_not_use_fs: "🚫 Всегда сохранять модули"
+    inline_settings: "⚙️ <b>Здесь можно управлять настройками</b>"
+    confirm_update: "🧭 <b>Подтверди обнову. Юб будет рестартнут</b>"
+    confirm_restart: "🔄 <b>Подтверд рестарт</b>"
+    suggest_fs: "✅ Предлагать сейв модов"
+    do_not_suggest_fs: "🚫 Предлагать сейв модов"
+    use_fs: "✅ Всегда сейвить моды"
+    do_not_use_fs: "🚫 Всегда сейвить моды"
     btn_restart: "🔄 Рестарт"
     btn_update: "🧭 Обнова"
     close_menu: "😌 Закрыть менюшку"
@@ -303,8 +303,8 @@ test:
     debugging_disabled: "<emoji document_id=5332533929020761310>✅</emoji> <b>Режим разработчика выключен</b>"
     suspend_invalid_time: "<emoji document_id=5210952531676504517>🚫</emoji> <b>Неверное время заморозки</b>"
     suspended: "<emoji document_id=5452023368054216810>🥶</emoji> <b>Бот заморожен на</b> <code>{}</code> <b>секунд</b>"
-    results_ping: "<emoji document_id=5431449001532594346>⚡️</emoji> <b>Пинг:</b> <code>{}</code> <b>ms</b>\n<emoji document_id=5445284980978621387>🚀</emoji> <b>Аптайм: {}</b>"
-    ping_hint: "<emoji document_id=5472146462362048818>💡</emoji> <u><i>Зачастую, пинг зависит от хоста, на котором поставлен юб. Если пинг будет выше, значит, либо с телегой чё то, либо хост хуйня. Чем ниже пинг - тем лучше</u></i>"
+    results_ping: "<emoji document_id=5431449001532594346>☠️</emoji> <b>Пинг:</b> <code>{}</code> <b>ms</b>\n<emoji document_id=5445284980978621387>💗</emoji> <b>Аптайм: {}</b>"
+    ping_hint: "<emoji document_id=5472146462362048818>🥰</emoji> <u><i>Зачастую, пинг зависит от хоста, на котором поставлен юб. Если пинг будет выше, значит, либо с телегой чё то, либо хост хуйня. Чем ниже пинг - тем лучше</u></i>"
     confidential: "⚠️ <b>Уровень логов</b> <code>{}</code> <b>может содержать личную информацию, будь осторожен</b>"
     confidential_text: "⚠️ <b>Уровень логов</b> <code>{0}</code> <b>может содержать личную информацию, будь осторожен</b>\n<b>Напиши</b> <code>.logs {0} force_insecure</code><b>, чтобы отправить логи игнорируя предупреждение</b>"
     choose_loglevel: "💁‍♂️ <b>Выбери уровень логов</b>"
